# Piconsole

./: BUILDING.md  CMakeLists.txt  README.md  README_HOST.md  install (1).sh  install.sh  pi_bridge (1).py  pi_bridge.py  pico_host_main.c  pico_main (1).py  pico_main.py  tusb_config.h
